--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ru.nordmine.yandex.parser.Parser</mainClass>
+                                    <mainClass>ru.nordmine.parser.Program</mainClass>
                                 </transformer>
                             </transformers>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
