новая команда, позволяющая скачивать содержимое словарных статей дополнительный запрос, удаляющий из частотного списка слова, которые уже активны на сайте

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>httpcore</artifactId>
             <version>4.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.directory.studio</groupId>
+            <artifactId>org.apache.commons.io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -57,8 +62,8 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
             <plugin>
